tests/invalid/std_imports_private_runtime_header.wio
use std::assert::private_runtime_header;

fn Entry() -> i32 {
    return 0;
}
